# lambda-tcp

./: CHANGELOG.md  README.md  lambda-tcp.cabal
src/: Ast.hs  Eval.hs  Main.hs  Parse.hs  Pretty.hs  Utils.hs
src/Eval/: Core.hs  Env.hs  Env.hs-boot  Lazy.hs  Lazy.hs-boot  Prelude.hs
src/Parse/: Core.hs  Error.hs  Lex.hs
src/TCP/: Client.hs  Server.hs  Vars.hs
tests/: ParseTests.hs  runTests.hs
tests/Eval/: LazyTests.hs  Utils.hs
tests/Parse/: CoreTests.hs  Utils.hs
