name:                lambda-tcp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lambda-tcp#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2022 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable lambda-tcp
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Ast 
                      , Parse.Core
                      , Utils
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , either
                      , network-simple
                      , mtl
  ghc-options:          -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wmissing-home-modules
                        -Wpartial-fields
                        -Wredundant-constraints

library 
  hs-source-dirs:       src
  exposed-modules:      Ast
                      , Parse.Core
                      , Utils
  build-depends:        base >= 4.7 && < 5
                      , either
                      , network-simple
                      , mtl
  ghc-options:          -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wmissing-home-modules
                        -Wpartial-fields
                        -Wredundant-constraints
  default-language:     Haskell2010

test-suite tests
  hs-source-dirs:       tests
  main-is:              runTests.hs
  other-modules:        Parse.CoreTests
  type:                 exitcode-stdio-1.0
  build-depends:        base
                      , lambda-tcp
                      , hspec
  ghc-options:          -Wall
                        -Wcompat
                        -Widentities
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wmissing-export-lists
                        -Wmissing-home-modules
                        -Wpartial-fields
                        -Wredundant-constraints
  default-language:     Haskell2010
